[gd_scene load_steps=21 format=3 uid="uid://xxprkydai7iy"]

[ext_resource type="Script" path="res://Scenes/UI/Skill_windows/get_skill_ui.gd" id="1_8r74x"]
[ext_resource type="FontFile" uid="uid://d0mbp31a4exgl" path="res://Resources/Fonts/Lilita One Regular.ttf" id="1_42rjm"]
[ext_resource type="Texture2D" uid="uid://co3u74kd0cfid" path="res://Texture/UI/background.png" id="2_guy50"]
[ext_resource type="PackedScene" uid="uid://btt53uxq2a182" path="res://Scenes/UI/Skill_windows/skill_window.tscn" id="3_yghhh"]
[ext_resource type="Texture2D" uid="uid://7cjj53ffct7k" path="res://Texture/UI/Skills_UI/кнопка покупки активная (кнопка рекламы).png" id="5_b6die"]
[ext_resource type="Texture2D" uid="uid://di2ih4646tj0g" path="res://Texture/UI/Skills_UI/иконка кнопки покупки.png" id="6_kc041"]
[ext_resource type="Texture2D" uid="uid://pyh11gs077ay" path="res://Texture/UI/Skills_UI/кнопка обновить.png" id="7_mbj7w"]
[ext_resource type="Texture2D" uid="uid://bs5vkbj2ijdcf" path="res://Texture/UI/Skills_UI/текстк кнопки обновить.png" id="8_j6pi7"]
[ext_resource type="Texture2D" uid="uid://cxk3lp3iqgprs" path="res://Texture/UI/Skills_UI/стрелки кнопки обновить.png" id="9_wywd0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_al670"]
bg_color = Color(0.478007, 0.618938, 0.736741, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jkoco"]
bg_color = Color(0.478007, 0.618938, 0.736741, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ny5mh"]
bg_color = Color(0.478007, 0.618938, 0.736741, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x8hou"]
bg_color = Color(0.478007, 0.618938, 0.736741, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xjevs"]
bg_color = Color(0.478007, 0.618938, 0.736741, 1)

[sub_resource type="Theme" id="Theme_1c8o8"]
Button/styles/disabled = SubResource("StyleBoxFlat_al670")
Button/styles/focus = SubResource("StyleBoxFlat_jkoco")
Button/styles/hover = SubResource("StyleBoxFlat_ny5mh")
Button/styles/normal = SubResource("StyleBoxFlat_x8hou")
Button/styles/pressed = SubResource("StyleBoxFlat_xjevs")

[sub_resource type="LabelSettings" id="LabelSettings_fibwp"]
font = ExtResource("1_42rjm")
font_size = 40
font_color = Color(0.133333, 0.266667, 0, 1)

[sub_resource type="Animation" id="Animation_g87ib"]
resource_name = "RESET"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 25)]
}

[sub_resource type="Animation" id="Animation_very0"]
resource_name = "window_input"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, -1700), Vector2(0, 25)]
}

[sub_resource type="Animation" id="Animation_h0q0m"]
resource_name = "windows_output"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0, 25), Vector2(0, -1700)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bsi4p"]
_data = {
"RESET": SubResource("Animation_g87ib"),
"window_input": SubResource("Animation_very0"),
"windows_output": SubResource("Animation_h0q0m")
}

[node name="Get_skill_UI" type="Control"]
z_index = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8r74x")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(375, 595)
scale = Vector2(2, 1.55)
texture = ExtResource("2_guy50")

[node name="Continue_game" type="Button" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -146.0
offset_bottom = -76.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_1c8o8")
theme_override_fonts/font = ExtResource("1_42rjm")
theme_override_font_sizes/font_size = 60
text = "ПРОДОЛЖИТЬ"

[node name="Windows_skill" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.272
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -0.160034
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Skill_window" parent="Windows_skill" instance=ExtResource("3_yghhh")]
layout_mode = 2

[node name="Skill_window2" parent="Windows_skill" instance=ExtResource("3_yghhh")]
layout_mode = 2

[node name="Skill_window3" parent="Windows_skill" instance=ExtResource("3_yghhh")]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = 136.0
offset_bottom = 144.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 40
alignment = 1

[node name="Skill_1" type="TextureButton" parent="HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("5_b6die")

[node name="ИконкаКнопкиПокупки" type="Sprite2D" parent="HBoxContainer2/Skill_1"]
position = Vector2(79, 37)
texture = ExtResource("6_kc041")

[node name="Label" type="Label" parent="HBoxContainer2/Skill_1"]
layout_mode = 0
offset_left = 30.0
offset_top = 12.0
offset_right = 196.0
offset_bottom = 64.0
text = "0"
label_settings = SubResource("LabelSettings_fibwp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Skill_2" type="TextureButton" parent="HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("5_b6die")

[node name="ИконкаКнопкиПокупки" type="Sprite2D" parent="HBoxContainer2/Skill_2"]
position = Vector2(79, 37)
texture = ExtResource("6_kc041")

[node name="Label" type="Label" parent="HBoxContainer2/Skill_2"]
layout_mode = 0
offset_left = 30.0
offset_top = 12.0
offset_right = 196.0
offset_bottom = 64.0
text = "0"
label_settings = SubResource("LabelSettings_fibwp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Skill_3" type="TextureButton" parent="HBoxContainer2"]
layout_mode = 2
texture_normal = ExtResource("5_b6die")

[node name="ИконкаКнопкиПокупки" type="Sprite2D" parent="HBoxContainer2/Skill_3"]
position = Vector2(79, 37)
texture = ExtResource("6_kc041")

[node name="Label" type="Label" parent="HBoxContainer2/Skill_3"]
layout_mode = 0
offset_left = 30.0
offset_top = 12.0
offset_right = 196.0
offset_bottom = 64.0
text = "0"
label_settings = SubResource("LabelSettings_fibwp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="КнопкаОбновить" type="Sprite2D" parent="."]
position = Vector2(361, 902)
texture = ExtResource("7_mbj7w")

[node name="ИконкаКнопкиПокупки" type="Sprite2D" parent="КнопкаОбновить"]
position = Vector2(98.5, -4)
texture = ExtResource("6_kc041")

[node name="Label2" type="Label" parent="КнопкаОбновить"]
offset_left = 42.0
offset_top = -28.0
offset_right = 208.0
offset_bottom = 24.0
text = "345"
label_settings = SubResource("LabelSettings_fibwp")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ТексткКнопкиОбновить2" type="Sprite2D" parent="КнопкаОбновить"]
position = Vector2(5, -2)
texture = ExtResource("8_j6pi7")

[node name="ТексткКнопкиОбновить" type="Sprite2D" parent="КнопкаОбновить"]
position = Vector2(-2, 3)
texture = ExtResource("9_wywd0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_bsi4p")
}

[connection signal="pressed" from="Continue_game" to="." method="_on_continue_game_pressed"]
[connection signal="pressed" from="HBoxContainer2/Skill_1" to="." method="_on_skill_1_pressed"]
[connection signal="pressed" from="HBoxContainer2/Skill_2" to="." method="_on_skill_2_pressed"]
[connection signal="pressed" from="HBoxContainer2/Skill_3" to="." method="_on_skill_3_pressed"]
